[package]
name = "xchain-rust-crypto"
version = "0.1.0"
authors = ["duanbing <duanbing@baidu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ring         = "0.16.9"
rand         = "0.7.2"
num-bigint   = "0.2.3"
base58       = "0.1.0"
#ripemd160    = "0.8.0"
rust-crypto  = "0.2.36"
serde        = "1.0.104"
serde_derive = "1.0.104"
serde_json   = "1.0.40"
