[package]
name = "xchain-rust-crypto"
version = "0.1.0"
authors = ["duanbing <duanbing@baidu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["alloc"]
alloc = []


[dependencies]
ring         = "0.16.9"
rand         = "0.7.2"
num-bigint   =  { version = "0.2.3", features = ["serde"] }
base58       = "0.1.0"
rust-crypto  = "0.2.36"
serde        = {  version = "1.0.104", features = ["derive"]}
serde_derive = "1.0.104"
serde_json   = "1.0.40"
rand_chacha  = "0.2.1"
lazy_static  = "1.4.0"
num-traits   = "0.2.10"
num-integer  = "0.1.41"
untrusted    = "0.7.0"
libc         = "0.2.69"
bytes = { version = "0.4.12"} # unix app depends on 0.4.12, while sgx lib depends on 0.5.0

[dev-dependencies]
hex = "0.4.0"
